added infoWindows and fixed some things

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,10 +7,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1 {
+.logo {
   position: absolute;
   top: 1rem;
-  left: 1rem;
+  right: 1rem;
   z-index: 10;
   margin: 0;
   padding: 0;
@@ -20,3 +20,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
