--- a/frontend/src/pages/map/map.css
+++ b/frontend/src/pages/map/map.css
@@ -2,3 +2,11 @@
   width: 100vw;
   height: 100vh;
 }
+
+.button {
+  cursor: pointer;
+  z-index: 1000;
+  right: -1px;
+  top: 10px;
+  position: absolute;
+}
