--- a/frontend/src/pages/map/map.css
+++ b/frontend/src/pages/map/map.css
@@ -3,9 +3,8 @@
   height: 100vh;
 }
 
-.button {
-  cursor: pointer;
-  z-index: 1000;
+.sembutton {
+  z-index: 400;
   right: -1px;
   top: 10px;
   position: absolute;
