added functionality to form, fixed button bugs

--- a/frontend/src/pages/map/map.css
+++ b/frontend/src/pages/map/map.css
@@ -9,3 +9,9 @@
   top: 10px;
   position: absolute;
 }
+
+.grid-container {
+  display: inline-grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
