Estilos, landing page, tweaks
Elementos CSS em todas as paginas alterados, adicionado novas paginas. imagens colocadas são apenas placeholders. TODO: acabar animações

--- a/frontend/src/pages/contactos/contactos.css
+++ b/frontend/src/pages/contactos/contactos.css
@@ -10,3 +10,17 @@ h1 {
   color: #015486;
   font-size: 6rem !important;
 }
+
+.backoffice {
+  font-size: 15px;
+}
+
+.backoffice a {
+  text-decoration: none;
+  color: #015486;
+}
+
+.backoffice a:hover {
+  text-decoration: none;
+  color: #015486;
+}
