--- a/frontend/src/pages/login/Login.css
+++ b/frontend/src/pages/login/Login.css
@@ -5,7 +5,7 @@
 #login .divimg {
   width: 100%;
   height: 100vh;
-  background: url(blur-background.jpg) top center;
+  background: url(../../assets/blur-background.jpg) top center;
   background-size: cover;
   /* filter: blur(8px);
   -webkit-filter: blur(8px); */
