--- a/frontend/src/pages/landingpage/landingpage.css
+++ b/frontend/src/pages/landingpage/landingpage.css
@@ -8,7 +8,7 @@
 #bemvindo .divimg {
   width: 100%;
   height: 100vh;
-  background: url(luizaandaluz.jpg) top center;
+  background: url(../../assets/nuvens.jpg) top center;
   background-size: cover;
   filter: blur(8px);
   -webkit-filter: blur(8px);
@@ -44,7 +44,7 @@
 }
 
 #bemvindo h1 {
-  color: #015486;
+  color: #253746;
 
   font-size: 56px;
   font-weight: 600;
@@ -52,7 +52,7 @@
 }
 
 #bemvindo h1 span {
-  color: #f82249;
+  color: #ffb81d;
 }
 
 @media (max-width: 991px) {
@@ -62,7 +62,7 @@
 }
 
 #bemvindo p {
-  color: #015486;
+  color: #253746;
   font-weight: 700;
   font-size: 23px;
 }
@@ -76,7 +76,7 @@
 #bemvindo .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#f82249 50%, rgba(101, 111, 150, 0.15) 52%);
+  background: radial-gradient(#ffb81d 50%, rgba(101, 111, 150, 0.15) 52%);
   border-radius: 50%;
   display: block;
   position: relative;
@@ -122,7 +122,7 @@
 }
 
 #bemvindo .play-btn:hover::after {
-  border-left: 15px solid #f82249;
+  border-left: 15px solid #ffb81d;
   transform: scale(20);
 }
 
@@ -206,13 +206,17 @@
 }
 
 #navegar h2 {
-  color: #015486 !important;
+  color: white !important;
+}
+
+#navegar h1 {
+  color: white !important;
 }
 
 #navegar .divimg {
   width: 100%;
   height: 100vh;
-  background: url("hero-bg.jpg");
+  background: url("../../assets/arvores.jpg");
   background-size: cover;
   filter: blur(8px);
   -webkit-filter: blur(8px);
@@ -243,7 +247,7 @@
   bottom: 10vw;
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.8); /* Black w/opacity/see-through */
-  border: 3px solid #015486;
+  border: 3px solid #ffb81d;
   padding-top: 1%;
   padding-left: 3%;
   padding-right: 3%;
