--- a/frontend/src/pages/contactos/contactos.css
+++ b/frontend/src/pages/contactos/contactos.css
@@ -24,3 +24,26 @@ h1 {
   text-decoration: none;
   color: #015486;
 }
+
+#contactos .cartao img {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+#contactos .cartao a {
+  color: #253746;
+}
+
+#contactos .cartao h3 {
+  margin-bottom: 20px;
+}
+#contactos .creditos button {
+  background-color: #ffb81d;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
